--- a/view/frontend/templates/account/additional/avatar.phtml
+++ b/view/frontend/templates/account/additional/avatar.phtml
@@ -1,6 +1,7 @@
 <?php
 /**
  * @var $block \GhoSter\CustomerAvatar\Block\Form\Edit
+ * @codingStandardsIgnoreFile
  */
 ?>
 <fieldset id="avatar-fieldset" class="fieldset avatar-field">
