--- a/view/frontend/templates/account/header/avatar.phtml
+++ b/view/frontend/templates/account/header/avatar.phtml
@@ -1,5 +1,8 @@
 <?php
-/** @var GhoSter\CustomerAvatar\Block\Account\Avatar $block */
+/**
+ * @var GhoSter\CustomerAvatar\Block\Account\Avatar $block
+ * @codingStandardsIgnoreFile
+ */
 ?>
 <?php if ($block->isCustomerLoggedIn()) : ?>
     <li class="avatar welcome" data-bind="scope: 'avatar'">
